--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    compileSdk 30
+    compileSdk 31
 
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
@@ -25,7 +25,7 @@ android {
     defaultConfig {
         applicationId "com.mnuel.dev.notes"
         minSdk 21
-        targetSdk 30
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -70,7 +70,7 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.10'
+        kotlinCompilerVersion '1.5.31'
     }
 }
 
@@ -82,8 +82,8 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    debugImplementation"androidx.compose.ui:ui-tooling:1.0.0-beta09"
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
+    debugImplementation"androidx.compose.ui:ui-tooling:1.0.0-rc02"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha05"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation "androidx.activity:activity-compose:$compose_version"
 
